[tool.poetry]
name = "graphquirements"
version = "0.1.0"
description = "View your requirements as a DAG"
authors = ["Federico OBERNDORFER <federico.ober@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
networkx = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-flake8 = "^1.0.5"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
